Added Responses, requests and mapper, changed controller and services